--- a/assets/pug/data/tables.pug
+++ b/assets/pug/data/tables.pug
@@ -111,7 +111,7 @@
     var OPEN_INVOICE=
         {
             header:["Name","Date","Amount","Status","Action"],
-            action:["Copy","Send Email","Before Due","Past Due"],
+            action:["Copy","Before Due","Past Due"],
             body:[
                 {
                     image:"1.jpg",
