--- a/assets/pug/mixin/element-widget2.pug
+++ b/assets/pug/mixin/element-widget2.pug
@@ -8,5 +8,5 @@ mixin widget2(data)
             div 
                h4.flex.items-center(class="text-2xl  5xl:text-lg 4xl:text-base font-extrabold text-title gap-[7px]")= data.price      
                span(class="font-semibold text-4xs text-content")= data.subTitle
-            p(class="line-clamp-3 mt-[18px] font-normal text-xs text-title")= data.pera   
+            p(class="line-clamp-3 3sm:line-clamp-2 mt-[18px] font-normal text-xs text-title")= data.pera   
          div(id=`${data.chart}`)
