--- a/assets/pug/pages/template/breadcrumb.pug
+++ b/assets/pug/pages/template/breadcrumb.pug
@@ -134,7 +134,7 @@ html(lang='en')
               div.card.tabs
                 div.card-header.pb-2.header-bottom-border
                   div.flex.flex-col
-                    h3.text-lg.font-bold Breadcrumb With Icon
+                    h3.text-lg.font-bold Breadcrumb with Icon
                     p   Set the icons with breadcrumb using 
                       strong .breadcrumb  
                       | & 
