--- a/assets/pug/pages/template/rating.pug
+++ b/assets/pug/pages/template/rating.pug
@@ -230,7 +230,7 @@ html(lang='en')
               div.card.tabs
                 div.card-header.pb-2.header-bottom-border
                   div.flex.flex-col
-                    h3.text-lg.font-bold Rating With Text
+                    h3.text-lg.font-bold Rating with Text
                     p Adding texts with rating.
                     div.preview-code.tab-links
                       button.p-0.tab.tab-lifted.tab-active(data-tabFilter="1" class="tab-link") Preview  
