--- a/assets/pug/pages/template/tabs.pug
+++ b/assets/pug/pages/template/tabs.pug
@@ -268,8 +268,8 @@ html(lang='en')
                             div(data-tabContent="1" class="tab-pan fade active show relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0")
                               p.text-xs.text-content3 Creating a website that will be valuable to its audience and be seen by them is the ultimate goal of all web design projects. It is vital to get friends with Google's mechanisms and algorithms in order to do that. A beautiful website serves no purpose if it appears on the tenth page of search results since no one will ever find it that way. Now let's talk about Google's Website Ranking.
                             div(data-tabContent="2" class="tab-pan fade group first:rounded-tl-none rounded-5 border-none !px-1 !pb-0")
-                              p.text-xs.text-content3 Construct a web page in a professional manner. Completely adaptable and simple Drag-n-Drop Nicepage editor. Change the text and photos, as well as the colors, fonts, header and footer, layout, and other design components.
-                              p(class="dark:text-white").text-title.font-bold Visit Us: 
+                              p(class="mb-2").text-xs.text-content3 Construct a web page in a professional manner. Completely adaptable and simple Drag-n-Drop Nicepage editor. Change the text and photos, as well as the colors, fonts, header and footer, layout, and other design components.
+                              p(class="dark:text-white").text-title.font-bold Visit Us:
                                 span.text-content3.text-2xs 4 Marigold Close, Glenmore Park, New South Wales, 2745 Australia- 2745
                               p(class="dark:text-white").text-title.font-bold Mail Us: 
                                 span.text-content3.text-2xs SamuelMario@armyspy.com
@@ -291,7 +291,7 @@ html(lang='en')
                           |               &lt;p class="text-xs text-content3"&gt; Creating a website that...&lt;/p&gt;  
                           |           &lt;/div&gt;
                           |           &lt;div data-tabContent="2" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-0 !pb-0"&gt; 
-                          |               &lt;p class="text-xs text-content3"&gt; Construct a web page...&lt;/p&gt;  
+                          |               &lt;p class="text-xs text-content3 mb-2"&gt; Construct a web page...&lt;/p&gt;  
                           |               &lt;p class="font-bold text-title dark:text-white"&gt; Visit Us:   
                           |                   &lt;span class="text-content3 text-2xs"&gt;4 Marigold Close, Glenmore Park, New South Wales, 2745 Australia- 2745&lt;/span&gt; 
                           |               &lt;/p&gt;
