--- a/html/template/modal.html
+++ b/html/template/modal.html
@@ -785,7 +785,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./index.html">Unique</a></li>
                     <li> <a href="./ecommerce.html">Ecommerce</a></li>
                   </ul>
@@ -802,7 +802,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./rtl.html">RTL</a></li>
                     <li> <a href="./dark-layout.html">Dark Layout</a></li>
                     <li> <a href="./monochrome-mode.html">Monochrome Mode</a></li>
@@ -816,7 +816,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./alert.html">Alert</a></li>
                     <li> <a href="./avatars.html">Avatars</a></li>
                     <li> <a href="./badge.html">Badge</a></li>
@@ -837,7 +837,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./breadcrumb.html">Breadcrumb</a></li>
                     <li> <a href="./countdown.html">Countdown</a></li>
                     <li> <a href="./indicator.html">Indicator</a></li>
@@ -859,7 +859,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./feather.html">Feather</a></li>
                     <li> <a href="./fontawesome.html">Font Awesome</a></li>
                     <li> <a href="./iconly.html">Iconly</a></li>
@@ -883,7 +883,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="chat-app.html">Chat App</a></li>
                     <li> <a href="video-app.html">Video App</a></li>
                   </ul>
@@ -900,7 +900,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="add-product.html">Add Product</a></li>
                     <li> <a href="cart.html">Cart</a></li>
                     <li> <a href="checkout.html">Checkout</a></li>
@@ -934,7 +934,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="user-card.html">User Cards</a></li>
                     <li> <a href="user-profile.html">User Profile</a></li>
                   </ul>
@@ -947,7 +947,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./checkbox-radio.html">Checkbox &amp; Radio</a></li>
                     <li> <a href="./form-validation.html">Form Validation</a></li>
                     <li> <a href="./input-textarea.html">Input &amp; Textarea</a></li>
@@ -968,7 +968,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./coming-soon.html">Coming Soon</a></li>
                     <li> <a href="./error.html">Error</a></li>
                     <li> <a href="./forgot-password.html">Forgot Password</a></li>
@@ -991,7 +991,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./blog-grid.html">Blog Grid</a></li>
                     <li> <a href="./blog-detail.html">Blog Detail</a></li>
                   </ul>
@@ -1008,7 +1008,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./maps-js.html">Maps Js</a></li>
                     <li> <a href="./data-map.html">Data Map</a></li>
                   </ul>
@@ -1715,13 +1715,13 @@
         <label class="modal-overlay peer-checked:block" for="modal-1"></label>
         <div class="modal peer-checked:opacity-100 peer-checked:visible w-[18.75rem] dark:bg-sidebar-dark2">
           <div class="modal-header"> 
-            <h3>Hasten up !! </h3>
+            <h3>Hasten up !</h3>
             <label for="modal-1"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
           </div>
           <div class="modal-body text-center">
             <p class="text-lg font-bold">Up to <span class="text-xl text-secondary">85% OFF</span> , Hurry Up Online Shopping</p>
             <div class="modal-img"><img class="w-40" src="../../assets/images/modal/online-shopping.gif" alt="shopping"></div>
-            <label class="bg-primary text-white py-1 px-2 rounded text-end inline-block" for="modal-1"><a href="shop.html">Explore More</a></label>
+            <label class="hover:cursor-pointer bg-primary text-white py-1 px-2 rounded text-end inline-block" for="modal-1"><a href="shop.html">Explore More</a></label>
           </div>
         </div>
       </div>
@@ -1734,7 +1734,7 @@
             <label for="modal-2"> <i class="w-4 h-4 stroke-dark" data-feather="x"></i></label>
           </div>
           <div class="modal-body h-[12.5rem]">
-            <p> </p>We build specialized websites for companies, list them on digital directories, and set up a sales funnel to boost ROI.
+            <p></p>We build specialized websites for companies, list them on digital directories, and set up a sales funnel to boost ROI.
           </div>
         </div>
       </div>
@@ -1824,7 +1824,7 @@
             <div class="modal-img"> <img class="w-40" src="../../assets/images/modal/cookies-sendcookie.gif" alt="Cookies"></div>
           </div>
           <div class="modal-footer">
-            <label class="btn btn-primary p-2 text-white inline-block" for="modal-5">Accept</label>
+            <label class="hover:cursor-pointer btn btn-primary p-2 text-white inline-block" for="modal-5">Accept</label>
           </div>
         </div>
       </div>
@@ -1836,7 +1836,7 @@
             <div class="modal-img"><img class="w-14" src="../../assets/images/modal/danger.gif" alt="danger"></div>
             <h3 class="text-lg font-bold mb-2">Ohh! Something went wrong!</h3>
             <p class="mb-3">Attackers on malicious activity may trick you into doing something dangerous like installing software or revealing your personal information.</p>
-            <label class="btn btn-danger py-1 px-2 text-white inline-block text-sm" for="modal-6">Close</label>
+            <label class="hover:cursor-pointer btn btn-danger py-1 px-2 text-white inline-block text-sm" for="modal-6">Close</label>
           </div>
         </div>
       </div>
@@ -1881,7 +1881,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <label class="btn btn-primary text-white py-1 px-2 inline-block text-sm !text-end" for="modal-7">Close</label>
+            <label class="hover:cursor-pointer btn btn-primary text-white py-1 px-2 inline-block text-sm !text-end" for="modal-7">Close</label>
           </div>
         </div>
       </div>
@@ -1946,7 +1946,7 @@
               <li><img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
             </ul>
             <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
-            <label class="btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-10">Create an account</label>
+            <label class="hover:cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-10">Create an account</label>
           </div>
         </div>
       </div>
@@ -1961,7 +1961,7 @@
               <li><img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
             </ul>
             <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
-            <label class="btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-11">Create an account</label>
+            <label class="hover:cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-11">Create an account</label>
           </div>
         </div>
       </div>
@@ -1973,10 +1973,10 @@
             <ul class="modal-img">
               <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
               <li><img class="w-52" src="../../assets/images/modal/instagram.gif" alt="instagram"></li>
-              <li><img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
+              <li> <img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
             </ul>
             <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
-            <label class="btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-14"> Create an account</label>
+            <label class="hover:cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-14"> Create an account</label>
           </div>
         </div>
       </div>
@@ -1988,7 +1988,7 @@
             <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
             <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
             <p class="mb-3">Now, you can access your account.</p>
-            <label class="btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-12">Close</label>
+            <label class="hover:cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-12">Close</label>
           </div>
         </div>
       </div>
@@ -2000,7 +2000,7 @@
             <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
             <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
             <p class="mb-3">Now, you can access your account.</p>
-            <label class="btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-13">Close</label>
+            <label class="hover:cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-13">Close</label>
           </div>
         </div>
       </div>
@@ -2012,7 +2012,7 @@
             <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
             <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
             <p class="mb-3">Now, you can access your account.</p>
-            <label class="btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-15">Close</label>
+            <label class="hover:cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-15">Close</label>
           </div>
         </div>
       </div>
