--- a/html/template/monochrome-mode.html
+++ b/html/template/monochrome-mode.html
@@ -785,7 +785,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./index.html">Unique</a></li>
                     <li> <a href="./ecommerce.html">Ecommerce</a></li>
                   </ul>
@@ -802,7 +802,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./rtl.html">RTL</a></li>
                     <li> <a href="./dark-layout.html">Dark Layout</a></li>
                     <li> <a href="./monochrome-mode.html">Monochrome Mode</a></li>
@@ -816,7 +816,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./alert.html">Alert</a></li>
                     <li> <a href="./avatars.html">Avatars</a></li>
                     <li> <a href="./badge.html">Badge</a></li>
@@ -837,7 +837,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./breadcrumb.html">Breadcrumb</a></li>
                     <li> <a href="./countdown.html">Countdown</a></li>
                     <li> <a href="./indicator.html">Indicator</a></li>
@@ -859,7 +859,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./feather.html">Feather</a></li>
                     <li> <a href="./fontawesome.html">Font Awesome</a></li>
                     <li> <a href="./iconly.html">Iconly</a></li>
@@ -883,7 +883,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="chat-app.html">Chat App</a></li>
                     <li> <a href="video-app.html">Video App</a></li>
                   </ul>
@@ -900,7 +900,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="add-product.html">Add Product</a></li>
                     <li> <a href="cart.html">Cart</a></li>
                     <li> <a href="checkout.html">Checkout</a></li>
@@ -934,7 +934,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="user-card.html">User Cards</a></li>
                     <li> <a href="user-profile.html">User Profile</a></li>
                   </ul>
@@ -947,7 +947,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./checkbox-radio.html">Checkbox &amp; Radio</a></li>
                     <li> <a href="./form-validation.html">Form Validation</a></li>
                     <li> <a href="./input-textarea.html">Input &amp; Textarea</a></li>
@@ -968,7 +968,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./coming-soon.html">Coming Soon</a></li>
                     <li> <a href="./error.html">Error</a></li>
                     <li> <a href="./forgot-password.html">Forgot Password</a></li>
@@ -991,7 +991,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./blog-grid.html">Blog Grid</a></li>
                     <li> <a href="./blog-detail.html">Blog Detail</a></li>
                   </ul>
@@ -1008,7 +1008,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./maps-js.html">Maps Js</a></li>
                     <li> <a href="./data-map.html">Data Map</a></li>
                   </ul>
@@ -1197,7 +1197,7 @@
                             <div> 
                               <h4 class="flex items-center text-2xl  5xl:text-lg 4xl:text-base font-extrabold text-title gap-[7px]">$4,875</h4><span class="font-semibold text-4xs text-content">Total Expense</span>
                             </div>
-                            <p class="line-clamp-3 mt-[18px] font-normal text-xs text-title">Profit is grow 45% more than last Month continue increasing</p>
+                            <p class="line-clamp-3 3sm:line-clamp-2 mt-[18px] font-normal text-xs text-title">Profit is grow 45% more than last Month continue increasing</p>
                           </div>
                           <div id="earningChart"></div>
                         </div>
