--- a/html/template/tabs.html
+++ b/html/template/tabs.html
@@ -787,7 +787,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./index.html">Unique</a></li>
                     <li> <a href="./ecommerce.html">Ecommerce</a></li>
                   </ul>
@@ -804,7 +804,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./rtl.html">RTL</a></li>
                     <li> <a href="./dark-layout.html">Dark Layout</a></li>
                     <li> <a href="./monochrome-mode.html">Monochrome Mode</a></li>
@@ -818,7 +818,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./alert.html">Alert</a></li>
                     <li> <a href="./avatars.html">Avatars</a></li>
                     <li> <a href="./badge.html">Badge</a></li>
@@ -839,7 +839,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./breadcrumb.html">Breadcrumb</a></li>
                     <li> <a href="./countdown.html">Countdown</a></li>
                     <li> <a href="./indicator.html">Indicator</a></li>
@@ -861,7 +861,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./feather.html">Feather</a></li>
                     <li> <a href="./fontawesome.html">Font Awesome</a></li>
                     <li> <a href="./iconly.html">Iconly</a></li>
@@ -885,7 +885,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="chat-app.html">Chat App</a></li>
                     <li> <a href="video-app.html">Video App</a></li>
                   </ul>
@@ -902,7 +902,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="add-product.html">Add Product</a></li>
                     <li> <a href="cart.html">Cart</a></li>
                     <li> <a href="checkout.html">Checkout</a></li>
@@ -936,7 +936,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="user-card.html">User Cards</a></li>
                     <li> <a href="user-profile.html">User Profile</a></li>
                   </ul>
@@ -949,7 +949,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./checkbox-radio.html">Checkbox &amp; Radio</a></li>
                     <li> <a href="./form-validation.html">Form Validation</a></li>
                     <li> <a href="./input-textarea.html">Input &amp; Textarea</a></li>
@@ -970,7 +970,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./coming-soon.html">Coming Soon</a></li>
                     <li> <a href="./error.html">Error</a></li>
                     <li> <a href="./forgot-password.html">Forgot Password</a></li>
@@ -993,7 +993,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./blog-grid.html">Blog Grid</a></li>
                     <li> <a href="./blog-detail.html">Blog Detail</a></li>
                   </ul>
@@ -1010,7 +1010,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./maps-js.html">Maps Js</a></li>
                     <li> <a href="./data-map.html">Data Map</a></li>
                   </ul>
@@ -1274,8 +1274,8 @@
                               <p class="text-xs text-content3">Creating a website that will be valuable to its audience and be seen by them is the ultimate goal of all web design projects. It is vital to get friends with Google's mechanisms and algorithms in order to do that. A beautiful website serves no purpose if it appears on the tenth page of search results since no one will ever find it that way. Now let's talk about Google's Website Ranking.</p>
                             </div>
                             <div class="tab-pan fade group first:rounded-tl-none rounded-5 border-none !px-1 !pb-0" data-tabContent="2">
-                              <p class="text-xs text-content3">Construct a web page in a professional manner. Completely adaptable and simple Drag-n-Drop Nicepage editor. Change the text and photos, as well as the colors, fonts, header and footer, layout, and other design components.</p>
-                              <p class="dark:text-white text-title font-bold">Visit Us: <span class="text-content3 text-2xs">4 Marigold Close, Glenmore Park, New South Wales, 2745 Australia- 2745</span></p>
+                              <p class="mb-2 text-xs text-content3">Construct a web page in a professional manner. Completely adaptable and simple Drag-n-Drop Nicepage editor. Change the text and photos, as well as the colors, fonts, header and footer, layout, and other design components.</p>
+                              <p class="dark:text-white text-title font-bold">Visit Us:<span class="text-content3 text-2xs">4 Marigold Close, Glenmore Park, New South Wales, 2745 Australia- 2745</span></p>
                               <p class="dark:text-white text-title font-bold">Mail Us: <span class="text-content3 text-2xs">SamuelMario@armyspy.com</span></p>
                               <p class="dark:text-white text-title font-bold">Contact: <span class="text-content3 text-2xs">(02) 4733 6337</span></p>
                             </div>
@@ -1296,7 +1296,7 @@
               &lt;p class="text-xs text-content3"&gt; Creating a website that...&lt;/p&gt;  
           &lt;/div&gt;
           &lt;div data-tabContent="2" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-0 !pb-0"&gt; 
-              &lt;p class="text-xs text-content3"&gt; Construct a web page...&lt;/p&gt;  
+              &lt;p class="text-xs text-content3 mb-2"&gt; Construct a web page...&lt;/p&gt;  
               &lt;p class="font-bold text-title dark:text-white"&gt; Visit Us:   
                   &lt;span class="text-content3 text-2xs"&gt;4 Marigold Close, Glenmore Park, New South Wales, 2745 Australia- 2745&lt;/span&gt; 
               &lt;/p&gt;
