--- a/html/template/widgets.html
+++ b/html/template/widgets.html
@@ -783,7 +783,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./index.html">Unique</a></li>
                     <li> <a href="./ecommerce.html">Ecommerce</a></li>
                   </ul>
@@ -800,7 +800,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./rtl.html">RTL</a></li>
                     <li> <a href="./dark-layout.html">Dark Layout</a></li>
                     <li> <a href="./monochrome-mode.html">Monochrome Mode</a></li>
@@ -814,7 +814,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./alert.html">Alert</a></li>
                     <li> <a href="./avatars.html">Avatars</a></li>
                     <li> <a href="./badge.html">Badge</a></li>
@@ -835,7 +835,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./breadcrumb.html">Breadcrumb</a></li>
                     <li> <a href="./countdown.html">Countdown</a></li>
                     <li> <a href="./indicator.html">Indicator</a></li>
@@ -857,7 +857,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./feather.html">Feather</a></li>
                     <li> <a href="./fontawesome.html">Font Awesome</a></li>
                     <li> <a href="./iconly.html">Iconly</a></li>
@@ -881,7 +881,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="chat-app.html">Chat App</a></li>
                     <li> <a href="video-app.html">Video App</a></li>
                   </ul>
@@ -898,7 +898,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="add-product.html">Add Product</a></li>
                     <li> <a href="cart.html">Cart</a></li>
                     <li> <a href="checkout.html">Checkout</a></li>
@@ -932,7 +932,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="user-card.html">User Cards</a></li>
                     <li> <a href="user-profile.html">User Profile</a></li>
                   </ul>
@@ -945,7 +945,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./checkbox-radio.html">Checkbox &amp; Radio</a></li>
                     <li> <a href="./form-validation.html">Form Validation</a></li>
                     <li> <a href="./input-textarea.html">Input &amp; Textarea</a></li>
@@ -966,7 +966,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./coming-soon.html">Coming Soon</a></li>
                     <li> <a href="./error.html">Error</a></li>
                     <li> <a href="./forgot-password.html">Forgot Password</a></li>
@@ -989,7 +989,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./blog-grid.html">Blog Grid</a></li>
                     <li> <a href="./blog-detail.html">Blog Detail</a></li>
                   </ul>
@@ -1006,7 +1006,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./maps-js.html">Maps Js</a></li>
                     <li> <a href="./data-map.html">Data Map</a></li>
                   </ul>
@@ -1022,7 +1022,7 @@
             <div class="col-span-8 xl:col-span-12"> 
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card svg-shake">
+                  <div class="card svg-shake transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1052,7 +1052,7 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card svg-shake">
+                  <div class="card svg-shake transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1082,7 +1082,7 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card svg-shake">
+                  <div class="card svg-shake transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1112,7 +1112,7 @@
                   </div>
                 </div>
                 <div class="col-span-1 md:col-span-2">
-                  <div class="card svg-shake">
+                  <div class="card svg-shake transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="grid grid-cols-12">
                       <div class="col-span-7 5xl:col-span-8 2xl:col-span-7 2lg:col-span-8 3sm:col-span-9">
                         <div class="flex items-center gap-[9px]">
@@ -1157,9 +1157,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body"> 
-                  <div class="relative"> 
-                    <div id="recentStatisticsChart1">    </div>
+                <div class="card-body">
+                  <div class="relative">
+                    <div id="recentStatisticsChart1">  </div>
                     <div class="absolute inset-0" id="recentStatisticsChart2"></div>
                   </div>
                 </div>
@@ -1168,7 +1168,7 @@
             <div class="col-span-4 xl:col-span-6 lg:col-span-12 xl3:order-5">
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card"> 
+                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header"> 
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Earnings</h3>
@@ -1195,7 +1195,7 @@
                             <div> 
                               <h4 class="flex items-center text-2xl  5xl:text-lg 4xl:text-base font-extrabold text-title gap-[7px]">$4,875</h4><span class="font-semibold text-4xs text-content">Total Expense</span>
                             </div>
-                            <p class="line-clamp-3 mt-[18px] font-normal text-xs text-title">Profit is grow 45% more than last Month continue increasing</p>
+                            <p class="line-clamp-3 3sm:line-clamp-2 mt-[18px] font-normal text-xs text-title">Profit is grow 45% more than last Month continue increasing</p>
                           </div>
                           <div id="earningChart"></div>
                         </div>
@@ -1204,7 +1204,7 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card">
+                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-body">
                       <div> 
                         <div class="flex items-center justify-between">
@@ -1237,7 +1237,7 @@
             <div class="col-span-4 xl:col-span-6 lg:col-span-12">
               <div class="grid grid-cols-2 gap-card-gap">
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2"> 
-                  <div class="card">
+                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
                     <div class="card-header">
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Inventory Cost</h3>
@@ -1257,7 +1257,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="card-body"> 
+                    <div class="card-body">
                       <ul> 
                         <li class="py-[7px] px-[10px] bg-gray-light mt-[9px] first:mt-0 group dark:bg-sidebar-dark2"><a class="flex items-center justify-between" href="javascript:void(0)">
                             <div class="flex items-center gap-2"> <img class="w-10 h-10 scale-100 rounded-full group-hover:scale-105" src="../../assets/images/product/product-list/1.jpg" alt="Inventory Cost"/>
@@ -1278,7 +1278,7 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card p-0 overflow-hidden">
+                  <div class="card p-0 overflow-hidden transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45 ">
                     <div class="relative"><img class="w-full h-[178px] 2xl:h-[170px] lg:h-[193px] 2md:h-[170px] dark:brightness-50" src="../../assets/images/banner/2.jpg" alt="banner">
                       <div class="absolute top-1/2 -translate-y-1/2 left-0 max-w-[70%] px-card-space"> 
                         <h5 class="text-lg font-extrabold text-title">$5,859 </h5>
@@ -1292,8 +1292,8 @@
             <div class="col-span-4 xl:col-span-6 lg:col-span-12">
               <div class="grid grid-cols-2 gap-card-gap"> 
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card">
-                    <div class="card-header">   
+                  <div class="card transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45">
+                    <div class="card-header">
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                         <h3 class="text-lg font-bold text-title leading-none">Advertising</h3>
                         <div class="dropdown on-hover-show">
@@ -1333,14 +1333,14 @@
                   </div>
                 </div>
                 <div class="col-span-2 lg:col-span-1 2md:col-span-2">
-                  <div class="card !gap-1 lg:!gap-6"> 
-                    <div class="card-header">
+                  <div class="card !gap-1 lg:!gap-6 transition ease-in delay-400 duration-500 hover:shadow-sm hover:-translate-y-1 hover:scale-45"> 
+                    <div class="card-header"> 
                       <div class="flex justify-between w-full flex-wrap gap-2 items-center">
-                        <h3 class="text-lg font-bold text-title leading-none">Most Location Visits</h3>
+                        <h3 class="text-lg font-bold text-title leading-none">Most Location Visits </h3>
                       </div>
                     </div>
                     <div class="card-body">
-                      <div class="flex items-center h-full"> 
+                      <div class="flex items-center h-full">
                         <ul class="flex flex-col gap-[15px] w-full sm:flex-col"> 
                           <li class="flex items-center relative gap-[21px] md:gap-[8px] 2lg:gap-[14px] py-[7px] 3xl:py-[5px] px-[14px] 3xl:px-[11px] 2md:px-[6px]">
                             <div class="absolute inset-0 bg-success opacity-20"></div>
