--- a/html/template/index.html
+++ b/html/template/index.html
@@ -783,7 +783,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./index.html">Unique</a></li>
                     <li> <a href="./ecommerce.html">Ecommerce</a></li>
                   </ul>
@@ -800,7 +800,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./rtl.html">RTL</a></li>
                     <li> <a href="./dark-layout.html">Dark Layout</a></li>
                     <li> <a href="./monochrome-mode.html">Monochrome Mode</a></li>
@@ -814,7 +814,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./alert.html">Alert</a></li>
                     <li> <a href="./avatars.html">Avatars</a></li>
                     <li> <a href="./badge.html">Badge</a></li>
@@ -835,7 +835,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./breadcrumb.html">Breadcrumb</a></li>
                     <li> <a href="./countdown.html">Countdown</a></li>
                     <li> <a href="./indicator.html">Indicator</a></li>
@@ -857,7 +857,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./feather.html">Feather</a></li>
                     <li> <a href="./fontawesome.html">Font Awesome</a></li>
                     <li> <a href="./iconly.html">Iconly</a></li>
@@ -881,7 +881,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="chat-app.html">Chat App</a></li>
                     <li> <a href="video-app.html">Video App</a></li>
                   </ul>
@@ -898,7 +898,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="add-product.html">Add Product</a></li>
                     <li> <a href="cart.html">Cart</a></li>
                     <li> <a href="checkout.html">Checkout</a></li>
@@ -932,7 +932,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="user-card.html">User Cards</a></li>
                     <li> <a href="user-profile.html">User Profile</a></li>
                   </ul>
@@ -945,7 +945,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./checkbox-radio.html">Checkbox &amp; Radio</a></li>
                     <li> <a href="./form-validation.html">Form Validation</a></li>
                     <li> <a href="./input-textarea.html">Input &amp; Textarea</a></li>
@@ -966,7 +966,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./coming-soon.html">Coming Soon</a></li>
                     <li> <a href="./error.html">Error</a></li>
                     <li> <a href="./forgot-password.html">Forgot Password</a></li>
@@ -989,7 +989,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./blog-grid.html">Blog Grid</a></li>
                     <li> <a href="./blog-detail.html">Blog Detail</a></li>
                   </ul>
@@ -1006,7 +1006,7 @@
                     <svg> 
                       <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                     </svg></a>
-                  <ul class="sidebar-submenu">
+                  <ul class="sidebar-submenu"> 
                     <li> <a href="./maps-js.html">Maps Js</a></li>
                     <li> <a href="./data-map.html">Data Map</a></li>
                   </ul>
@@ -1040,7 +1040,7 @@
                     </div>
                   </h4>
                   <p class="text-xs font-semibold text-content-white leading-[22px] max-w-[285px] mt-1">Welcome to the Govo family! we are glad that you are visite this dashboard.</p>
-                  <button class="mt-6 sm:mt-4 rounded-5 py-[8px] px-4 bg-white text-xs font-bold text-title dark:bg-sidebar-dark2 transition duration-150 ease-out hover:ease-in hover:scale-y-50">What New!</button>
+                  <button class="mt-6 sm:mt-4 rounded-5 py-[8px] px-4 bg-white text-xs font-bold text-title dark:bg-sidebar-dark2 hover:text-primary">What New!</button>
                 </div>
                 <div class="relative bg-img"> <img class="img-fluid welcome-img" src="../../assets/images/svg/1.svg" alt="welcome-image"><img class="w-[28px] h-[28px] common-animate animate-ping top-[14px] 6xl:top-[30px] 4xl:top-[14px] absolute left-[10%] 2md:left-[24%] sm:left-[10%] animate__animated animate__infinite animate__shakeY animate__slower" src="../../assets/images/svg/done.svg" alt="welcome-done-image"><img class="w-24 h-w-24 common-animate animate-ping top-[-10%] 6xl:top-[4%] 4xl:top-[-10%] absolute right-[2%] 2md:right-[17%] sm:right-[2%] left-unset  animate__animated animate__infinite animate__shakeY animate__slower" src="../../assets/images/svg/rocket.svg" alt="welcome-rocket-image"></div>
               </div>
@@ -1238,7 +1238,7 @@
                             <div> 
                               <h4 class="flex items-center text-2xl  5xl:text-lg 4xl:text-base font-extrabold text-title gap-[7px]">$4,875</h4><span class="font-semibold text-4xs text-content">Total Expense</span>
                             </div>
-                            <p class="line-clamp-3 mt-[18px] font-normal text-xs text-title">Profit is grow 45% more than last Month continue increasing</p>
+                            <p class="line-clamp-3 3sm:line-clamp-2 mt-[18px] font-normal text-xs text-title">Profit is grow 45% more than last Month continue increasing</p>
                           </div>
                           <div id="earningChart"></div>
                         </div>
@@ -1673,32 +1673,32 @@
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold text-title leading-none">Users Positions</h3>
                     <div class="flex">
-                      <button class="py-2 px-3 text-3xs font-semibold rounded-none text-title bg-gray-light dark:bg-sidebar-dark2 dark:border-border-dark  hover:bg-primary hover:text-white dark:hover:bg-primary  dark:focus:bg-primary focus:text-white focus:bg-primary ">Yearly</button>
-                      <button class="py-2 px-3 text-3xs font-semibold rounded-none text-title bg-gray-light dark:bg-sidebar-dark2 dark:border-border-dark  hover:bg-primary hover:text-white dark:hover:bg-primary  dark:focus:bg-primary focus:text-white focus:bg-primary ">Monthly</button>
-                      <button class="py-2 px-3 text-3xs font-semibold rounded-none text-white bg-primary hover:bg-primary hover:text-white dark:hover:bg-primary  dark:focus:bg-primary focus:text-white focus:bg-primary ">Weekly</button>
+                      <button class="py-2 px-3 text-3xs font-semibold rounded-none text-title bg-gray-light dark:bg-sidebar-dark2 dark:border-border-dark  active:bg-primary active:text-white  dark:hover:bg-primary  dark:focus:bg-primary focus:text-white focus:bg-primary ">Yearly</button>
+                      <button class="py-2 px-3 text-3xs font-semibold rounded-none text-title bg-gray-light dark:bg-sidebar-dark2 dark:border-border-dark  active:bg-primary active:text-white  dark:hover:bg-primary  dark:focus:bg-primary focus:text-white focus:bg-primary ">Monthly</button>
+                      <button class="py-2 px-3 text-3xs font-semibold rounded-none text-white bg-primary active:bg-primary active:text-white  dark:hover:bg-primary  dark:focus:bg-primary focus:text-white focus:bg-primary ">Weekly</button>
                     </div>
                   </div>
                 </div>
                 <div class="card-body"> 
-                  <div class="grid grid-cols-12"> 
+                  <div class="grid grid-cols-12">  
                     <div class="col-span-2 xl:col-span-3 2md:col-span-12"> 
                       <ul class="flex flex-col gap-[14px] 2md:gap-[8px] 2md:flex-row 2md:flex-wrap">
-                        <li> 
+                        <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-success h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Rephrase Words</span></button>
                         </li>
-                        <li> 
+                        <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-danger h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Presentation</span></button>
                         </li>
-                        <li> 
+                        <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-title h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Fill the Gap</span></button>
                         </li>
-                        <li> 
+                        <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-warning h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Drag and Drop</span></button>
                         </li>
-                        <li> 
+                        <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-success h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Quizz</span></button>
                         </li>
-                        <li> 
+                        <li>
                           <button class="flex items-center gap-2 justify-start w-full text-xs font-semibold 2md:py-[7px] 2md:px-[7px] py-[9px] px-4 bg-gray-light dark:bg-sidebar-dark2"><span class="w-[10px] bg-danger h-[10px] rounded-[2px]"></span><span class="text-xs font-semibold text-left line-clamp-1 ">Introduction</span></button>
                         </li>
                       </ul>
@@ -1737,7 +1737,7 @@
               </div>
             </div>
             <div class="col-span-6 4xl:col-span-8 lg:col-span-12">
-              <div class="card">
+              <div class="card"> 
                 <div class="card-header">
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold text-title leading-none">Open Invoices</h3>
@@ -1757,8 +1757,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body">
-                  <div class="overflow-auto custom-scroll">
+                <div class="card-body"> 
+                  <div class="overflow-auto custom-scroll"> 
                     <table class="table equal-space">
                       <thead> 
                         <tr> 
@@ -1788,7 +1788,6 @@
                             <div class="custom-select select-style-1">
                               <select>
                                 <option value="">Copy</option>
-                                <option value="">Send Email</option>
                                 <option value="">Before Due</option>
                                 <option value="">Past Due</option>
                               </select>
@@ -1813,7 +1812,6 @@
                             <div class="custom-select select-style-1">
                               <select>
                                 <option value="">Copy</option>
-                                <option value="">Send Email</option>
                                 <option value="">Before Due</option>
                                 <option value="">Past Due</option>
                               </select>
@@ -1838,7 +1836,6 @@
                             <div class="custom-select select-style-1">
                               <select>
                                 <option value="">Copy</option>
-                                <option value="">Send Email</option>
                                 <option value="">Before Due</option>
                                 <option value="">Past Due</option>
                               </select>
@@ -1863,7 +1860,6 @@
                             <div class="custom-select select-style-1">
                               <select>
                                 <option value="">Copy</option>
-                                <option value="">Send Email</option>
                                 <option value="">Before Due</option>
                                 <option value="">Past Due</option>
                               </select>
@@ -1878,7 +1874,7 @@
             </div>
             <div class="col-span-3 4xl:col-span-4 lg:col-span-6 lg:-order-1 2md:col-span-12">
               <div class="card"> 
-                <div class="card-header">
+                <div class="card-header"> 
                   <div class="flex justify-between w-full flex-wrap gap-2 items-center">
                     <h3 class="text-lg font-bold text-title leading-none">Notification</h3>
                     <div class="dropdown on-hover-show">
